--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
+    "en-lexicon": "^1.0.11",
+    "file-saver": "^2.0.0-rc.4",
+    "ngx-filesaver": "^2.1.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
